refactor: address sonar code smells (#484)
- Use Math.clamp instead of nested Math.min/Math.max in ExecutionProfiler
- Replace instanceof if/else chain with a switch in AssigneeUtils
- Pass an explicit ZoneId to LocalDateTime.now() in StringToDateConverter
- Use assertDoesNotThrow() instead of try/catch+fail() in mapper tests
- Use java.time.Month constants instead of int literals in tests